--- a/gitpen/templates/index.html
+++ b/gitpen/templates/index.html
@@ -13,29 +13,31 @@
     <body>
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
 
-        <div class="input-group p-3">
-            <select id="path-dropdown" class="form-select" aria-label="Select example">
-            </select>
-                <div class="input-group-append">
-                    <button id="directory-update" class="btn btn-outline-secondary" type="button">Home</button>
-                </div>
-        </div>
-
-        <div id="content-navigation" class="list-group p-3">
-        </div>
-
-        <div class="mx-auto w-75 text-center pt-4 pb-2">
-            <div id="fileControls" class="btn-group" role="group" aria-label="Basic example">
+        <div style="max-width: 800px;" class="container">
+            <div class="input-group p-3">
+                <select id="path-dropdown" class="form-select" aria-label="Select example">
+                </select>
+                    <div class="input-group-append">
+                        <button id="directory-update" class="btn btn-outline-secondary" type="button">Home</button>
+                    </div>
             </div>
+
+            <div id="content-navigation" class="list-group p-3">
+            </div>
+
+            <div class="mx-auto w-75 text-center py-4">
+                <div id="fileControls" class="btn-group" role="group" aria-label="Basic example">
+                </div>
+            </div>
+
+            <div id="activeFile" style="display: none;" class="list-group p-3 bg-light border border-secondary rounded">
+            </div>
+
+            <textarea style="display: none;" id="mde-area"></textarea>
+            <div class="container pb-5">
+            <div>
+
+            <script src="static/js/scripts.js"></script>
         </div>
-
-        <div id="activeFile" class="list-group p-3">
-        </div>
-
-        <textarea style="display: none;" id="mde-area"></textarea>
-        <div class="container pb-5">
-        <div>
-
-        <script src="static/js/scripts.js"></script>
     </body>
 </html>
