feat(#10): add side menu with file/folder dropdown

--- a/gitpen/src/app/header/header.component.html
+++ b/gitpen/src/app/header/header.component.html
@@ -1,14 +1,50 @@
-<div style="margin-top: 50px">
-</div>
-<div class="input_field">
-  <form>
-    <mat-form-field>
-      <mat-label>Select Folder</mat-label>
-      <mat-select [(ngModel)]="selectedPath" name="path">
-        @for (path of paths; track path) {
-        <mat-option [value]="path.value">{{path.value}}</mat-option>
-        }
-      </mat-select>
-    </mat-form-field>
-  </form>
+<button class="hamburger" [class.white]="menuOpen"(click)="toggleMenu()">
+    &#9776;
+</button>
+
+<div class="overlay" [class.open]="menuOpen">
+    <button class="close-btn" (click)="toggleMenu()">×</button>
+    <div class="folderContainer">
+        <ul>
+            <li *ngFor="let item of fileStructure">
+                <span (click)="toggleFolder(item)">
+
+                    <ng-container *ngIf="item.type === 'folder'">
+                        <i class="fas fa-folder folder-icon"></i>
+                    </ng-container>
+
+                    <ng-container *ngIf="item.type === 'file'">
+                        <i class="fas fa-file file-icon"></i>
+                    </ng-container>
+                    {{ item.name }}
+                </span>
+
+                <div class="folder-content" *ngIf="item.type === 'folder'" [class.expanded]="item.expanded">
+                    <ng-container *ngTemplateOutlet="folderTemplate; context: { children: item.children }"></ng-container>
+                </div>
+            </li>
+        </ul>
+
+        <ng-template #folderTemplate let-children="children">
+            <ul>
+                <li *ngFor="let child of children" [class.expanded]="child.expanded">
+                    <span (click)="toggleFolder(child)">
+
+                        <ng-container *ngIf="child.type === 'folder'">
+                            <i class="fas fa-folder folder-icon"></i>
+                        </ng-container>
+
+                        <ng-container *ngIf="child.type === 'file'">
+                            <i class="fas fa-file file-icon"></i>
+                        </ng-container>
+                        {{ child.name }}
+                    </span>
+
+                    <div class="folder-content" *ngIf="child.type === 'folder'" [class.expanded]="child.expanded">
+                        <ng-container *ngTemplateOutlet="folderTemplate; context: { children: child.children }"></ng-container>
+                    </div>
+                </li>
+            </ul>
+        </ng-template>
+    </div>
 </div>
