--- a/gitpen/src/app/header/header.component.scss
+++ b/gitpen/src/app/header/header.component.scss
@@ -1,3 +1,22 @@
+@use '../../styles' as *;
+
+body {
+  display: flex;
+  margin: 0;
+  height: 100vh;
+}
+
+span, .folder-icon, .file-icon {
+  transition: opacity 0.1s ease-in-out;
+  &:active {
+    opacity: 0.4;
+  }
+}
+
+span:hover, .folder-icon:hover, .file-icon:hover {
+  opacity: 0.4;
+}
+
 .hamburger {
   font-size: 30px;
   background: none;
@@ -8,7 +27,7 @@
   left: 20px;
   z-index: 1000;
   &.white {
-    color: white;
+    display: none;
   }
 }
 
@@ -16,20 +35,35 @@
   position: fixed;
   top: 0;
   left: -100%;
-  width: 100vw;
-  height: 100vh;
-  max-width: 500px;
-  background: rgb(197 197 197); 
-  color: white;
+  width: 100%;
+  height: 100%;
+  background: rgb(255 255 255 / 90%); 
+  color: black;
   display: flex;
+  overflow-x: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
   align-items: center;
   justify-content: center;
   transition: left 0.3s ease-in-out;
   z-index: 999;
+  overflow-y: auto;
+  backdrop-filter: blur(4px);
+  ::-webkit-scrollbar {
+      display: none;
+  }
   &.open {
     left: 0;
   }
   display: block;
+  .logo-container {
+    margin-top: 20px;
+    padding-bottom: 10px;
+    width: 80%;
+  }
+  .logo-fc {
+    height: 120px;
+  }
 }
 
 .close-btn {
@@ -39,13 +73,17 @@
   font-size: 40px;
   background: none;
   border: none;
-  color: white;
+  color: black;
   cursor: pointer;
 }
 
 .folderContainer {
   margin-left: 25px;
-  margin-top: 100px;
+  max-height: 100vh;
+  overflow-y: auto;
+  ::-webkit-scrollbar {
+    display: none;
+  }
 }
 
 ul {
@@ -80,20 +118,70 @@ ul {
 }
 .folder-content {
   overflow: hidden;
-  transition: max-height 0.3s ease-in-out;
+  transition: max-height 0.1s ease-in-out;
   max-height: 0;
   &.expanded {
-    max-height: 1000px;
+    max-height: 3000px;
   }
 }
 
 .li.expanded .folder-content {
-  transition: max-height 0.3s ease-in-out;
+  transition: max-height 0.1s ease-in-out;
 }
 
 li {
   ul {
     display: block;
     margin-left: 5px;
+  }
+}
+
+@media (min-width: 768px) {
+  .overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: $fcWidth;
+    border-right: 1px solid rgba(0, 0, 0, 0.1);
+    box-shadow: 2px 0px 10px rgba(0, 0, 0, 0.1)
+  }
+  .main-content {
+    margin-left: fcWidth;
+    width: calc(100% - $fcWidth);
+    transition: margin-left 0.1s ease-in-out;
+  }
+
+  .hamburger {
+    display: none;
+  }
+
+  .close-btn {
+    display: none;
+  }
+
+  .folderContainer {
+    margin-left: 20px;
+  }
+
+  .logo-container {
+    text-align: center;
+  }
+}
+
+@media (max-width: 768px) {
+  .overlay {
+    left: -100%;
+  }
+
+  .hamburger {
+    display: block;
+  }
+
+  .main-content {
+    margin-left: 0;
+    width: 100%;
+  }
+  .logo-container {
+    text-align: left;
   }
 }
