--- a/gitpen/src/app/home/home.component.scss
+++ b/gitpen/src/app/home/home.component.scss
@@ -1,5 +1,24 @@
+@use '../../styles' as *;
+
 .content {
-  width: 80%;
-  margin: auto;
+  margin-left: auto;
   text-align: center;
+}
+
+.content {
+  padding-top: 100px;
+  text-align: center;
+  padding-right: $contentPadding / 2;
+}
+
+@media (max-width: 768px) {
+  .content {
+    width: 80%;
+  }
+}
+
+@media (min-width: 768px) {
+  .content {
+    width: calc(100% - $fcWidth - $contentPadding);
+  }
 }
