feat(#10): add editor and saving functionallity

--- a/gitpen/src/app/header/header.component.html
+++ b/gitpen/src/app/header/header.component.html
@@ -1,6 +1,8 @@
-<button class="hamburger" [class.white]="menuOpen"(click)="toggleMenu()">
-    &#9776;
-</button>
+<div class="hamburger-wrap">
+    <button class="hamburger" [class.white]="menuOpen"(click)="toggleMenu()">
+        &#9776;
+    </button>
+</div>
 
 <div class="overlay" [class.open]="menuOpen">
     <button class="close-btn" (click)="toggleMenu()">×</button>
