--- a/gitpen/src/app/header/header.component.scss
+++ b/gitpen/src/app/header/header.component.scss
@@ -17,6 +17,17 @@ span:hover, .folder-icon:hover, .file-icon:hover {
   opacity: 0.4;
 }
 
+.hamburger-wrap {
+  width: 100%;
+  top: 0;
+  padding-top: 80px;
+  background-color: white;
+  position: fixed;
+  &.white {
+    display: none;
+  }
+}
+
 .hamburger {
   font-size: 30px;
   background: none;
@@ -24,7 +35,7 @@ span:hover, .folder-icon:hover, .file-icon:hover {
   cursor: pointer;
   position: fixed;
   top: 20px;
-  left: 20px;
+  left: 15px;
   z-index: 1000;
   &.white {
     display: none;
@@ -79,7 +90,7 @@ span:hover, .folder-icon:hover, .file-icon:hover {
 
 .folderContainer {
   margin-left: 25px;
-  max-height: 100vh;
+  max-height: 95vh;
   overflow-y: auto;
   ::-webkit-scrollbar {
     display: none;
@@ -149,6 +160,10 @@ li {
     margin-left: fcWidth;
     width: calc(100% - $fcWidth);
     transition: margin-left 0.1s ease-in-out;
+  }
+
+  .hamburger-wrap {
+    display: none;
   }
 
   .hamburger {
