--- a/gitpen/src/app/home/home.component.scss
+++ b/gitpen/src/app/home/home.component.scss
@@ -1,23 +1,54 @@
 @use '../../styles' as *;
 
-.content {
+
+::ng-deep markdown pre {
+  max-width: 100%;
+  overflow-x: auto;
+  white-space: pre-wrap;
+  word-wrap: break-word;
+  word-break: break-all;
+}
+
+::ng-deep .markdown-body {
+    line-height: 0.1;
+}
+
+::ng-deep markdown img {
+  max-width: 100%;
+  height: auto;
+}
+
+.content-filename {
   margin-left: auto;
-  text-align: center;
+  text-align: left;
+  padding-right: calc($contentPadding / 2);
+  font-weight: 500;
+  font-size: 30px;
 }
 
 .content {
-  padding-top: 100px;
-  text-align: center;
-  padding-right: $contentPadding / 2;
+  margin-left: auto;
+  padding-top: 40px;
+  padding-bottom: 100px;
+  padding-right: calc($contentPadding / 2);
+  text-align: left;
 }
 
 @media (max-width: 768px) {
+  .content-filename {
+    padding-top: 100px;
+    width: 80%;
+  }
   .content {
     width: 80%;
   }
 }
 
 @media (min-width: 768px) {
+  .content-filename {
+    padding-top: 50px;
+    width: calc(100% - $fcWidth - $contentPadding);
+  }
   .content {
     width: calc(100% - $fcWidth - $contentPadding);
   }
