fix(#12): file saving on pc

--- a/gitpen/src/app/editor/editor.component.html
+++ b/gitpen/src/app/editor/editor.component.html
@@ -1,4 +1,4 @@
-<div (dbclick)="sharedService.toggleEdit()" (touchend)="handleTouchEdit($event)">
+<div (dblclick)="handleClickEdit($event)" (touchend)="handleTouchEdit($event)">
     <div class="content-filename">
         <i class="fas fa-file file-icon"></i>
         {{ fileName }}
