--- a/gitpen/src/app/home/home.component.scss
+++ b/gitpen/src/app/home/home.component.scss
@@ -42,6 +42,13 @@
   .content {
     width: 80%;
   }
+
+  * {
+    user-select: none !important;
+    -webkit-user-select: none !important;
+    -moz-user-select: none !important;
+    -ms-user-select: none !important;
+  }
 }
 
 @media (min-width: 768px) {
@@ -49,7 +56,16 @@
     padding-top: 50px;
     width: calc(100% - $fcWidth - $contentPadding);
   }
+
+  * {
+    user-select: text !important;
+    -webkit-user-select: text !important;
+    -moz-user-select: text !important;
+    -ms-user-select: text !important;
+  }
+
   .content {
     width: calc(100% - $fcWidth - $contentPadding);
   }
+
 }
