--- a/gitpen/src/app/home/home.component.scss
+++ b/gitpen/src/app/home/home.component.scss
@@ -38,7 +38,6 @@
 }
 
 .content {
-  margin-left: auto;
   padding-top: 40px;
   padding-bottom: 100px;
   padding-right: calc($contentPadding / 2);
@@ -52,6 +51,7 @@
   }
   .content {
     width: 80%;
+    margin-left: auto;
   }
 
   * {
@@ -76,7 +76,8 @@
   }
 
   .content {
-    width: calc(100% - $fcWidth - $contentPadding);
+    max-width: 800px;
+    margin-left: calc($fcWidth + $contentPadding / 2);
   }
 
 }
